--- a/css/shared.css
+++ b/css/shared.css
@@ -5,26 +5,49 @@
     width: 100%;
     background-color: #212121;
     display: flex;
-    flex-wrap: nowrap;
-    flex-flow: row;
+    flex-wrap: wrap;
+    flex-direction: row;    
+    justify-content: space-between;
+    align-content: center;
+}
+
+.lvlx-header-hamburger-container {
+    width: 50px;
+    height: 50px;
+    margin-left: 1rem;
 }
 
 .lvlx-header-hamburger {
-    width: 44px;
-    height: 33px;
-    margin-top: auto;
-    border: 1px solid red;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
 }
 
+.lvlx-header-logo-container {
+    height: 50px;
+    aspect-ratio: 180/50;
+}
 .lvlx-header-logo {
-    height: 33px;
-    width: 100px;
-    border: 1px solid red;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    cursor: pointer;
+}
+
+.lvlx-header-back-button-container {
+    width: 50px;
+    height: 50px;
+    margin-right: 1rem;
+    padding: 5px;
 }
 
 .lvlx-header-back-button {
-    width: 33px;
-    height: 33px;
-    margin-top: auto;
-    border: 1px solid red;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    display: none;
+}
+
+.lvlx-header-back-button.visible {
+    display: inline-block;
 }
