--- a/css/menu.css
+++ b/css/menu.css
@@ -1,9 +1,49 @@
-.menu-item {
-    border: 1px solid red !important;
-    width: 140px;
-    height: 140px;
+.lvlx-menu-container {
+    width: 100%;
+    height: fit-content;
+    margin: 0;
+    padding: 24px 0 0 0;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 
-.menu-icon {
+.lvlx-menu-row {
+    width: 100%;
+    height: fit-content;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
 
+.lvlx-menu-item {
+    aspect-ratio: 1/1;
+    width: 30%;
+    background-color: #212121;
+    border-radius: 26px;
+    margin: 12px;
+    box-shadow: 0px 4px 6px 2px rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: space-around;
+    cursor: pointer;
+}
+
+.lvlx-menu-item-icon {
+    aspect-ratio: 1/1;
+    width: 60%;
+}
+
+.lvlx-menu-item-text {
+    width: 100%;
+    text-align: center;
+    font-size: 5vw;
+    line-height: 4.2vw;
+    margin: 0;
+    padding: 0;
 }
