--- a/css/shared.css
+++ b/css/shared.css
@@ -9,18 +9,22 @@
     flex-direction: row;    
     justify-content: space-between;
     align-content: center;
+    box-shadow: 0px 4px 8px 2px rgba(0, 0, 0, 0.49);
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top: 0;
 }
 
 .lvlx-header-hamburger-container {
     width: 50px;
     height: 50px;
     margin-left: 1rem;
+    cursor: pointer;
 }
 
 .lvlx-header-hamburger {
     width: 50px;
     height: 50px;
-    cursor: pointer;
 }
 
 .lvlx-header-logo-container {
