--- a/css/shared.css
+++ b/css/shared.css
@@ -1,3 +1,30 @@
+/* Reset CSS Properties */
+
+* {
+    font-family: 'Bebas Neue', sans-serif;
+    color: #FFFFFF;
+}
+
+body {
+    background-color: #1B1B1B !important;
+    width: 100%;
+    height: 100vh;
+    background-image: url(../imgs/background-lines.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+a {
+    text-decoration: none!important;
+}
+
+.hidden {
+    display: none!important;
+}
+
+/* Header Properties */
+
 .lvlx-header {
     padding: 0;
     margin: 0;
