--- a/css/shared.css
+++ b/css/shared.css
@@ -23,6 +23,11 @@ a {
     display: none!important;
 }
 
+.transparent-bg {
+    background-color: transparent!important;
+    background-image: none!important;
+}
+
 /* Header Properties */
 
 .lvlx-header {
@@ -103,6 +108,7 @@ a {
 
 .lvlx-card {
     width: 95%;
+    aspect-ratio: 17 / 7;
     display: flex;
     flex-direction: row;
     border-radius: 11px;
@@ -115,12 +121,13 @@ a {
     width: 30%;
     aspect-ratio: 1/1;
     object-fit: contain;
+    border-radius: 11px;
 }
 
 .lvlx-card-text-container {
     width: 70%;
     height: 100%;
-    margin-left: 10px;
+    margin-left: 16px;
 }
 
 .lvlx-card-title {
@@ -135,5 +142,5 @@ a {
 .lvlx-card-description {
     width: 100%;
     height: calc(100% - 16px);
-    overflow: hidden;
+    overflow: scroll;
 }
